--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tailwindcss -i ./src/input.css -o ./dist/output.css",
+    "build": "tailwindcss -i ./src/input.css -o ./dist/output.css && cp index.html dist/index.html",
     "watch": "tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
-  },
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,4 +15,5 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4"
   }
+
 }
